Sessions/ClaudeCode/Session003/force-app/main/default/objects/DetailedNote__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <label>Body</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>