Sessions/ClaudeCode/Session003/force-app/main/default/objects/DetailedNote__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Detailed Notes</relationshipLabel>
    <relationshipName>DetailedNotes</relationshipName>
    <type>Lookup</type>
</CustomField>