Sessions/ClaudeCode/Session003/force-app/main/default/objects/DetailedNote__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Detailed Notes</relationshipLabel>
    <relationshipName>DetailedNotes</relationshipName>
    <type>Lookup</type>
</CustomField>